@@ -67,12 +67,10 @@ int event_output_not_available_time (pstdout_state_t pstate,
 
 int event_output_sensor_name (pstdout_state_t pstate,
 			      ipmi_sel_ctx_t sel_ctx,
-			      ipmi_sdr_ctx_t sdr_ctx,
 			      uint8_t *sel_record,
 			      unsigned int sel_record_len,
 			      struct sensor_column_width *column_width,
 			      struct common_cmd_args *common_args,
-			      int entity_sensor_names,
 			      int comma_separated_output,
 			      unsigned int flags);
 
