@@ -58,6 +58,7 @@ extern "C" {
 #define IPMI_SEL_STRING_FLAGS_DATE_USE_SLASH                0x0008
 #define IPMI_SEL_STRING_FLAGS_DATE_MONTH_STRING             0x0010
 #define IPMI_SEL_STRING_FLAGS_NON_ABBREVIATED_UNITS         0x0020
+#define IPMI_SEL_STRING_FLAGS_ENTITY_SENSOR_NAMES           0x0040
 #define IPMI_SEL_STRING_FLAGS_INTERPRET_OEM_DATA            0x0100
 #define IPMI_SEL_STRING_FLAGS_LEGACY                        0x1000
 
