@@ -56,6 +56,7 @@
    | IPMI_SEL_STRING_FLAGS_DATE_USE_SLASH           \
    | IPMI_SEL_STRING_FLAGS_DATE_MONTH_STRING        \
    | IPMI_SEL_STRING_FLAGS_NON_ABBREVIATED_UNITS    \
+   | IPMI_SEL_STRING_FLAGS_ENTITY_SENSOR_NAMES      \
    | IPMI_SEL_STRING_FLAGS_INTERPRET_OEM_DATA       \
    | IPMI_SEL_STRING_FLAGS_LEGACY)
 
